--- a/src/components/weather-info/weather-panel.css
+++ b/src/components/weather-info/weather-panel.css
@@ -1,8 +1,18 @@
 .weatherPanelWrapper {
-    width: 45%;
+    min-width: 650px;
+    width: 30vw;
     height: 100%;
     display: flex;
     flex-direction: column;
+
+    & input {
+        margin-top: 10px;
+        border: none;
+        border-bottom: 2px solid #999;
+        outline: none;
+        font-size: 20px;
+        font-family: Ubuntu Condensed, serif;
+    }
 
     .weatherPanelHeader {
         display: flex;
@@ -17,12 +27,13 @@
 
     .weatherInfo {
         display: flex;
-        height: 350px;
+        height: 300px;
         flex-direction: column;
         background-color: #56ACC8;
         color: white;
+        margin-bottom: 20px;
 
-        border-radius: 4%;
+        border-radius: 15px;
 
         & span {
             font-size: 55px;
@@ -34,6 +45,8 @@
         .weatherRow {
             display: flex;
             justify-content: space-between;
+            flex-grow: 1;
+            padding-bottom: 20px;
 
             .weatherRowLeft, .weatherRowRight {
                 display: flex;
@@ -41,15 +54,48 @@
             }
 
             .weatherRowRight {
-                margin-right: 80px;
+                margin-right: 60px;
                 border-left: 2px white solid;
 
                 .vietor_vystrahy {
                     margin-top: 30px;
                     display: flex;
                     justify-content: space-between;
+
+                    .vystraha {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+
+                        & span {
+                            margin: 0 0 0 20px;
+                        }
+                    }
                 }
             }
+        }
+    }
+
+    .nextFourHours {
+
+        .nextFourHours_tabs {
+            margin-top: 20px;
+        }
+
+        .nextFourHours_tabs {
+            font-size: 20px;
+        }
+
+        .nextFourHours_tab:hover {
+            cursor: pointer;
+            text-decoration: underline #56ACC8;
+        }
+
+        .weatherInfoCards {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            margin-top: 10px;
         }
     }
 }
