main scren human

--- a/src/pages/main-page/main-page.css
+++ b/src/pages/main-page/main-page.css
@@ -7,3 +7,12 @@
         width: 45%;
     }
 }
+.dressupPanel{
+    width: 45vw;
+    display: center;
+    justify-content: space-between;
+
+    .filler {
+        width: 45%;
+    }
+}
