--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
+    transition: filter 0.5s ease; /* Add a smooth transition for the blur */
 
     & span {
         font-size: 50px;
