--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -6,6 +6,7 @@
     justify-content: space-between;
     background-color: #56ACC8;
     margin-bottom: 40px;
+    transition: filter 0.5s ease; /* Add a smooth transition for the blur */
 
     .navigationTabs {
         height: 100%;
