--- a/src/components/dressup-info/dressup-panel.css
+++ b/src/components/dressup-info/dressup-panel.css
@@ -1,8 +1,3 @@
-.dressupPanel-wrapper {
-  position: relative;
-  display: flex;
-}
-
 .dressup-panel {
   width: 30%;
   height: 100%;
@@ -11,20 +6,27 @@
   position: absolute;
 }
 
+.dressupPanel-wrapper {
+  position: relative;
+  display: flex;
+
+  & img {
+    position: absolute;
+    top: -200px;
+    left: -50px;
+  }
+}
+
 .human {
   position: relative;
   width: 800px;
   height: 1000px;
-  top: -30%;
-  left:2%; /*fix for variety of screens*/
 }
 .clothes {
   position: absolute;
   width: 800px;
   height: 1000px;
-  top: -30%;
-  left: -5%;
-  transition: left 0.5s ease-in-out; /* Added transition property for smooth movement */
+  transition: left 0.3s ease-in-out; /* Added transition property for smooth movement */
 }
 
 .layer1 {
@@ -34,21 +36,9 @@
   
 }
 
-.clothes.moveRight {
-  left: 35%;
-}
-
-.clothes.moveLeft {
-  left: -55%; /* Adjust the value based on how much you want the clothes to move */
-}
-
-.clothes.moveBack {
-  left: -5%; /* Set it to the original left position */
-}
-
 
 .clothes.pulsing {
-  animation: pulse 2s infinite alternate;
+  animation: pulse 1s infinite alternate;
 }
 
 @keyframes pulse {
