--- a/src/components/slider/slider-panel.css
+++ b/src/components/slider/slider-panel.css
@@ -43,6 +43,7 @@
     transform: rotate(90deg); 
     white-space: nowrap; 
     color: white;
+    cursor: default;
 }
 
 .arrowIndicator {
@@ -66,11 +67,11 @@
 }
 
 .sliderPanelWrapper.visible {
-    left: 0vw;
+    left: 0;
 }
 
 .sliderButton.hidden {
-    left: 0vw;
+    left: 0;
 }
 
 .sliderButton.visible {
