--- a/src/components/dressup-info/dressup-panel.css
+++ b/src/components/dressup-info/dressup-panel.css
@@ -1,3 +1,16 @@
+@media only screen and (max-width: 620px) {
+  .dressupPanel-wrapper {
+    & img {
+      width: 100% !important;
+    }
+  }
+
+  .dressup-panel {
+    width: 160% !important;
+    left: -20%;
+  }
+}
+
 .dressup-panel {
   width: 30%;
   height: 100%;
