--- a/src/components/slider/slider-panel.css
+++ b/src/components/slider/slider-panel.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 620px) {
+    .sliderPanelWrapper {
+        visibility: hidden;
+    }
+}
+
 .sliderPanelWrapper {
     z-index: 100;
     position: fixed;
